# privy

./: .env.template  .gitignore  README.md  pyproject.toml
contrib/: README.md  bootstrap-dev-env.sh
scripts/: upload_whl.sh
src/privy/: __init__.py  _relay.py  client.py  executor.py  protocol.py  proxy.py  server.py
tests/: conftest.py  test_end_to_end.py  test_executor.py  test_protocol.py
