[project]
name = "privy"
version = "0.0.1"
description = "Livy-style remote Python/bash execution over Azure Relay Hybrid Connections."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Raki Rahman" }]
dependencies = [
    "requests>=2.31",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "build>=1.2",
    "ruff>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "build>=1.2",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privy"]

[tool.hatch.build.targets.sdist]
include = ["src/privy", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py39"
extend-exclude = [".temp", ".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
